--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^3.15.2
   firebase_auth: ^5.3.0
   cloud_firestore: ^5.4.0
+  image_picker: ^1.1.2
+  firebase_storage: ^12.1.0
   
 dev_dependencies:
   flutter_test:
